@@ -1,3 +1,8 @@
+2000-07-12  Mark Elbrecht  <snowball3@bigfoot.com>
+
+	* config/obj-coff.c (coff_frob_section): Add padding to the last
+	  section when aligning it increases its size.
+
 2000-07-11  Kazu Hirata  <kazu@hxi.com>
 
 	* config/tc-tic54x.c: Fix formatting.
